objects/Idea_Issues__c.object
<CustomObject><fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Issue_Age__c</fullName>
        <formula>ROUND(NOW()-CreatedDate, 0)</formula>
        <label>Issue Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Issue_Status__c</fullName>
        <label>Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>Preventable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipName>Project_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Resolution_Strategy__c</fullName>
        <label>Resolution Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Team_Member_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N4100000GiuqsEAB</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Idea Issue</label><nameField>
        <label>Project Issue Number</label>
        <type>Text</type>
    </nameField><pluralLabel>Idea Issues</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>